Changed "Git" value to "Tag"

--- a/src/nuclio/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/functions/version/version-code/version-code.tpl.html
@@ -226,7 +226,7 @@
                     <div data-ng-if="$ctrl.selectedEntryType.id === 'git'"
                          class="ncl-code-entry-url">
                         <div class="field-label">
-                            <span>{{ 'functions:GIT' | i18next }}</span>
+                            <span>{{ 'common:TAG' | i18next }}</span>
                         </div>
                         <igz-validating-input-field data-field-type="input"
                                                     data-input-name="git"
