--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -1,7 +1,7 @@
 <div class="ncl-version-trigger ncl-version">
     <div class="common-table">
         <div class="content-message-pane"
-             data-ng-if="$ctrl.isHttpTriggerMsgShown()" ng-i18next="[html]functions:HTTP_TRIGGER_MSG">
+             data-ng-if="$ctrl.isHttpTriggerMsgShown()" data-ng-i18next="[html]functions:HTTP_TRIGGER_MSG">
         </div>
         <div class="common-table-header header-row">
             <div class="common-table-cell header-name">
