--- a/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -8,7 +8,7 @@
                     <div class="internal-invocation-urls">
                         <span class="monitoring-block-title">{{ 'functions:INTERNAL_INVOCATION_URLS' | i18next }}: </span>
                         <ul class="invocation-url-list">
-                            <li class="monitoring-invocation-url-wrapper" data-ng-repeat="url in $ctrl.version.status.internalInvocationURLs">
+                            <li class="monitoring-invocation-url-wrapper" data-ng-repeat="url in $ctrl.version.status.internalInvocationUrls">
                                 <span>{{url}}</span>
                                 <div class="igz-action-panel">
                                     <div class="actions-list">
@@ -21,8 +21,8 @@
                     <div class="external-invocation-urls">
                         <span class="monitoring-block-title">{{ 'functions:EXTERNAL_INVOCATION_URLS' | i18next }}: </span>
                         <ul class="invocation-url-list"
-                            data-ng-if="$ctrl.version.status.externalInvocationURLs.length > 0 && !$ctrl.isFunctionDeploying()">
-                            <li class="monitoring-invocation-url-wrapper" data-ng-repeat="url in $ctrl.version.status.externalInvocationURLs">
+                            data-ng-if="$ctrl.version.status.externalInvocationUrls.length > 0 && !$ctrl.isFunctionDeploying()">
+                            <li class="monitoring-invocation-url-wrapper" data-ng-repeat="url in $ctrl.version.status.externalInvocationUrls">
                                 <span>{{url}}</span>
                                 <div class="igz-action-panel">
                                     <div class="actions-list">
@@ -31,7 +31,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <p data-ng-if="!$ctrl.version.status.externalInvocationURLs.length && !$ctrl.isFunctionDeploying()"
+                        <p data-ng-if="!$ctrl.version.status.externalInvocationUrls.length && !$ctrl.isFunctionDeploying()"
                               data-ng-i18next="[html:i18next]({functionId: $ctrl.version.metadata.name})functions:TOOLTIP.TO_MAKE_FUNCTION_ACCESSIBLE">
                         </p>
                         <p data-ng-if="$ctrl.isFunctionDeploying()" data-ng-i18next="common:N_A"></p>
