Clean [i18n] Rename key message of "Create a new entry"

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -258,7 +258,7 @@
                 </div>
                 <div class="igz-create-button" data-ng-click="$ctrl.addNewNodeSelector($event)">
                     <span class="igz-icon-add-round"></span>
-                    {{ 'functions:CREATE_NEW_NODE_SELECTOR' | i18next }}
+                    {{ 'common:CREATE_NEW_ENTRY' | i18next }}
                 </div>
             </div>
         </div>
