[Nuclio] Functions: add pagination on frontend

--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -167,8 +167,8 @@
                         </div>
                         <div class="functions-pagination">
                             <igz-pagination data-page-data="$ctrl.page"
-                                            data-is-per-page-visible="true"
-                                            data-pagination-callback="$ctrl.paginationCallback(page)">
+                                            data-is-per-page-visible="false"
+                                            data-pagination-callback="$ctrl.paginationCallback(page, size)">
                             </igz-pagination>
                         </div>
                     </div>
