[Nuclio] Delete a function while it is deploying

--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -157,7 +157,7 @@
                                         data-functions-list="$ctrl.functions"
                                         data-get-function="$ctrl.getFunction({metadata: metadata})"
                                         data-get-functions="$ctrl.getFunctions({id: id})"
-                                        data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})"
+                                        data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData, ignoreValidation: ignoreValidation})"
                                         data-is-splash-showed="$ctrl.isSplashShowed"
                                         data-project="$ctrl.project"
                                         data-refresh-functions-list="$ctrl.refreshFunctions()"
