--- a/src/nuclio/functions/version/version.tpl.html
+++ b/src/nuclio/functions/version/version.tpl.html
@@ -19,7 +19,7 @@
                                       data-placeholder="{{ 'functions:PLACEHOLDER.ACTIONS' | i18next }}"
                                       data-values-array="$ctrl.actions"
                                       data-is-disabled="!$ctrl.isFunctionDeployed"
-                                      data-item-select-callback="$ctrl.onSelectAction(item)"
+                                      data-item-select-callback="$ctrl.onActionSelect(item)"
                                       data-skip-selection="true">
                 </igz-default-dropdown>
             </div>
@@ -36,7 +36,7 @@
             <div class="actions-bar-left actions-buttons-block">
                 <button class="ncl-new-entity-button igz-button-primary"
                         data-ng-class="{'disabled': $ctrl.isDeployButtonDisabled()}"
-                        data-ng-click="$ctrl.isInValidDeployState() || $ctrl.deployButtonClick($event)"
+                        data-ng-click="$ctrl.isFunctionDeploying() || $ctrl.deployButtonClick($event)"
                         data-uib-tooltip="{{ ($ctrl.version.status.state === 'building' ? 'functions:TOOLTIP.DEPLOY_IN_PROGRESS' :
                                               $ctrl.version.ui.isTriggersChanged || $ctrl.version.ui.isVolumesChanged ? 'functions:TOOLTIP.APPLY_CHANGES_TO_DEPLOY' :
                                               'functions:TOOLTIP.DEPLOY_INVALID_CONFIG') | i18next }}"
@@ -50,28 +50,23 @@
         </div>
     </igz-info-page-actions-bar>
 
-    <div data-ng-if="$ctrl.isDeployResultShown"
+    <div data-ng-if="$ctrl.deployResult.shown"
          class="ncl-edit-version-execution-result deploy-result"
-         data-ng-class="{'in-progress': $ctrl.isInValidDeployState(),
-                         'failed'     : $ctrl.version.status.state === 'error'}">
+         data-ng-class="$ctrl.deployResult.status.state">
         <div class="btn-close igz-icon-close"
-             data-ng-if="!$ctrl.isInValidDeployState()"
-             data-ng-click="$ctrl.toggleDeployResult()"></div>
+             data-ng-if="!$ctrl.isFunctionDeploying()"
+             data-ng-click="$ctrl.hideDeployResult()"></div>
         <div class="icon-collapsed general-content"
-             data-ng-class="$ctrl.rowIsCollapsed.deployBlock ? 'igz-icon-right' : 'igz-icon-down'"
-             data-ng-click="$ctrl.onRowCollapse('deployBlock')"></div>
+             data-ng-class="$ctrl.deployResult.collapsed ? 'igz-icon-right' : 'igz-icon-down'"
+             data-ng-click="$ctrl.onDeployResultToggle()"></div>
         <div class="ncl-execution-result-status"
-             data-ng-class="{'succeeded'  : $ctrl.version.status.state === 'ready',
-                             'in-progress': $ctrl.isInValidDeployState(),
-                             'collapsed'  : $ctrl.rowIsCollapsed.deployBlock}">
+             data-ng-class="[$ctrl.deployResult.status.state, { collapsed: $ctrl.deployResult.collapsed }]">
             <span class="result-status-icon"
-                  data-ng-class="{'igz-icon-tick-round' : $ctrl.version.status.state === 'ready',
-                                  'igz-icon-properties' : $ctrl.isInValidDeployState(),
-                                  'igz-icon-block'      : $ctrl.version.status.state === 'error'}"></span>
-            <span class="result-state">{{$ctrl.getDeployStatusState($ctrl.version.status.state)}}</span>
+                  data-ng-class="$ctrl.deployResult.status.icon"></span>
+            <span class="result-state">{{$ctrl.deployResult.status.text}}</span>
         </div>
         <div class="ncl-execution-result-block collapsed-block-content-wrapper"
-             data-uib-collapse="$ctrl.rowIsCollapsed.deployBlock">
+             data-uib-collapse="$ctrl.deployResult.collapsed">
             <div class="collapsed-block-title without-collapse">
                 {{ 'common:LOGS' | i18next }}
             </div>
@@ -83,8 +78,6 @@
         </div>
     </div>
 
-    <ncl-navigation-tabs data-tab-items="$ctrl.navigationTabsConfig"
-                         data-ng-class="{'ncl-version-configuration-tabs': $ctrl.getCurrentStateName() === 'app.project.function.edit.configuration'}">
-    </ncl-navigation-tabs>
+    <ncl-navigation-tabs data-tab-items="$ctrl.navigationTabsConfig"></ncl-navigation-tabs>
     <section class="ncl-edit-version-view" data-ui-view="version"></section>
 </div>
