IG-18410 UI Cosmetcs

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -220,7 +220,8 @@
                     <span>{{ 'common:TARGET_CPU' | i18next }}</span>
                     <igz-more-info
                             data-description="{{ 'functions:TARGET_CPU_DESCRIPTION' | i18next:{default: $ctrl.defaultFunctionConfig.spec.targetCPU} }}"
-                            data-trigger="click">
+                            data-trigger="click"
+                            data-is-html-enabled="true">
                     </igz-more-info>
                 </div>
                 <div class="igz-col-75 row-input slider">
